
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int crypt (char*,char*) ;
 char* possible_password (short,int) ;
 int printf (char*,char*) ;
 int strcmp (char*,int ) ;

int main (int argc, char *argv[])
{
  int i;
  char *pw;

  for (i = 0; i <= 0xffff; i++)
  {
    pw = possible_password ((short) i, 8);
    if (!argv[1] || !strcmp (argv[1], crypt (pw, argv[1])))
      printf ("%s\n", pw);
  }

  return 0;
}
